For historical reference, the complete LxDoom changelog follows it.

Changes from v2.2.3 to v2.2.4
- shared texture palette isn't the default anymore
- better invulnerabilty rendering for non paletted OpenGL
- small compilation fixed for OpenGL on some unix platforms
- fix for dehacked files which change frames
- fixed name clash when compiling for some unix platforms

Changes from v2.2.2 to v2.2.3
- improved mouse handling
- intermission demo sync bug fixed
- framebuffer update fixes (solves flicker on fbcon)
- -forceoldbsp allowed in non-GL version, and saved in demos
- fix player colours in multiplayer demos
- apply workarounds for buggy pwads even during demo playback
- fix numpad 5 key
- allow compilation on systems where SDL is built without joystick support
- fix comp_skymap
- using anisotropic filtering when the OpenGL extension is available
- using paletted textures when the OpenGL extension is available
- added gl_use_paletted_texture option to glboom configuration file
- using shared texture palette when the OpenGL extension is available
- added gl_use_shared_texture_palette option to glboom configuration file

Changes from v2.2.1 to v2.2.2
- more demo sync problems for original Doom and Boom fixed
- added changeable samplerate for soundmixing
- added fullscreen/window toggle in option menu
- added double buffering
- floor rendering made more accurate
- Win32 config file handling fixed
- fix endian conversion problem on Linux/PPC

Changes from v2.2.0 to v2.2.1
- improved fix for demo sync problems with lost souls bouncing off floors
- fixed bug where loading a -fast or -respawn savegame failed to restore
  those options properly
- fixed demo sync bug with doors also tagged to lift triggers
- fix some endianness problems in the OpenGL renderer
- hopefully fixed some problems compiling for Linux/ARM
- fix multi-level demo time totals to agree with compet-n
- linux rpm is now a bit more standardised

Changes from v2.1.2 to v2.2.0